# FogStripper-Removedor-Background-Temp

./: .gitignore  Makefile  com.github.FogStripper.yml  install.sh  pyproject.toml  requirements.txt
.github/workflows/: release.yml
scripts/: build_appimage.sh  build_deb.sh
