[project]
name = "fogstripper"
version = "1.0.0"
description = "Removedor de fundo de imagens usando rembg e RealESRGAN"
readme = "README.md"
license = {text = "GPL-3.0"}
requires-python = ">=3.10"
keywords = ["image", "background-removal", "rembg", "upscale", "realesrgan"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics :: Editors",
    "Topic :: Scientific/Engineering :: Image Processing",
]

[project.urls]
Repository = "https://github.com/FogStripper/FogStripper-Removedor-Background"

[tool.ruff]
target-version = "py310"
line-length = 120
exclude = [
    "venv",
    "venv_rembg",
    "venv_upscale",
    ".git",
    "__pycache__",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = [
    "E501",
    "E722",
    "F401",
    "F841",
    "B007",
    "B008",
]

[tool.ruff.lint.per-file-ignores]
"src/main.py" = ["E402"]
"src/workers/*.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_return_any = false
show_error_codes = true
pretty = true
disable_error_code = [
    "override",
    "union-attr",
    "assignment",
    "call-overload",
    "no-redef",
    "misc",
]
exclude = [
    "venv",
    "venv_rembg",
    "venv_upscale",
    "src/tests",
]

[tool.pytest.ini_options]
testpaths = ["src/tests"]
python_files = ["test_*.py"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "src/tests/*",
    "src/main.py",
    "src/gui/*",
    "src/workers/worker_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
fail_under = 40

[tool.bandit]
exclude_dirs = ["src/tests", "venv", "venv_rembg", "venv_upscale"]
skips = ["B101", "B404", "B603"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
upload_to_pypi = false
upload_to_release = true
build_command = "pip install build && python -m build"
commit_message = "chore(release): {version} [skip ci]"

[tool.semantic_release.changelog]
template_dir = ".github/templates"
changelog_file = "CHANGELOG.md"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "docs", "style", "refactor", "perf", "test", "build", "ci", "chore"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.semantic_release.remote]
type = "github"
token = { env = "GH_TOKEN" }

[tool.semantic_release.publish]
upload_to_vcs_release = true

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
